--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "task-tracker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
+  "engines": { "node": "16.15.1" },
   "scripts": {
     "start": "node server.ts",
     "server": "nodemon server.ts",
