--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.ts",
   "engines": { "node": "16.15.1" },
   "scripts": {
-    "start": "node server.ts",
+    "start": "node dist/server.js",
     "server": "nodemon server.ts",
     "postinstall": "tsc"
   },
