--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.ts",
-  "engines": { "node": "16.15.1" },
+  "engines": {
+    "node": "16.15.1"
+  },
   "scripts": {
     "start": "node dist/server.js",
     "server": "nodemon server.ts",
@@ -13,11 +15,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.6",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.6"
