--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/server.js",
-    "server": "nodemon server.ts"
+    "start": "node dist/index.js",
+    "server": "nodemon index.ts"
   },
   "keywords": [],
   "author": "",
