--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "node": "16.15.1"
   },
   "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/index.js",
+    "start": "ts-node dist/index.js",
     "server": "nodemon index.ts"
   },
   "keywords": [],
