--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "node": "16.15.1"
   },
   "scripts": {
-    "start": "ts-node dist/index.js",
+    "start": "node dist/index.js",
+    "postinstall": "tsc && mv -i -v public dist/ && rm -v -rf src",
+    "watch-node": "nodemon dist/index.js",
+    "watch-ts": "tsc -w",
     "server": "nodemon index.ts"
   },
   "keywords": [],
