--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "start": "node dist/index.js",
+    "postinstall": "tsc",
     "watch-node": "nodemon dist/index.js",
     "server": "nodemon index.ts"
   },
